--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -243,7 +243,9 @@ rules:
         - multiline: true
           minProperties: 1
           consistent: true
-    object-curly-spacing: error
+    object-curly-spacing:
+        - error
+        - always
     object-property-newline:
         - error
         - allowAllPropertiesOnSameLine: false
